updated admission info

--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
 
 <h1>Welcome - ようこそ - 歓迎!</h1> 
 <p>
-I'm SUZUKI, Atsushi (鈴木 惇), <a href="https://hkumath.hku.hk/MathWWW/people.php?faculty.suzuki">Assistant Professor at the University of Hong Kong (HKU)</a>.</p> 
+I'm SUZUKI, Atsushi (鈴木 惇), <a href="https://hkumath.hku.hk/MathWWW/people.php?faculty.suzuki">Assistant Professor at the University of Hong Kong (HKU).</a></p> 
 
-<p>My research interest is <strong>applied mathematics</strong> for <strong>machine learning</strong>. I have been working on <strong>differential-geometric machine learning</strong> and <strong>learning theory</strong>.</p>
-<p>	Email: atsushi.suzuki.rd [at] outlook.com </p>
+<p>My research interest is <strong>applied mathematics</strong> for <strong>machine learning</strong>. I have been working on <strong>learning theory</strong> and <strong>differential-geometric machine learning.</strong></p>
+<p>	Email: atsushi.suzuki.rd [at] outlook.com <br> <a href="https://kawaii-lab.github.io/">Click here to access our research group website (KAWAII lab).</a></p>
 
 <h2>News</h2>
 <ul>
 	<li>Will serve as Area Chair for <strong>NeurIPS 2025</strong>.</li>
-	<li>Our paper, <strong>"Hallucinations are inevitable but statistically negligible,"</strong> <a href="https://arxiv.org/abs/2502.12187">has been uploaded to arXiv.</a></li>
+	<li>Our paper, <strong>"Hallucinations are inevitable but statistically negligible,"</strong> <a href="https://arxiv.org/abs/2502.12187">has been uploaded to arXiv (2025-02-15).</a></li>
 	<li>Joined <strong>the University of Hong Kong</strong> as of 2025-01-01.</li>
-	<li>Our paper, <strong>"Foundation of Calculating Normalized Maximum Likelihood for Continuous Probability Models,"</strong> <a href="https://arxiv.org/abs/2409.08387">has been uploaded to arXiv.</a></li>
+	<li>Our paper, <strong>"Foundation of Calculating Normalized Maximum Likelihood for Continuous Probability Models,"</strong> <a href="https://arxiv.org/abs/2409.08387">has been uploaded to arXiv (2024-09-12).</a></li>
 </ul>
 
 <h2>About me</h2>
@@ -91,6 +91,7 @@ Scientists (DC2)</strong> (2018.04-2020.03)</li>
 
 <footer>
     <p><strong>Contact: </strong>atsushi.suzuki.rd [at] outlook.com</p>
+    <p><strong>Group Website: </strong><a href="https://kawaii-lab.github.io/">https://kawaii-lab.github.io/</a></p>
 </footer>
 
 </body>
