--- a/talks.html
+++ b/talks.html
@@ -73,6 +73,7 @@
 
 <footer>
     <p><strong>Contact: </strong>atsushi.suzuki.rd [at] outlook.com</p>
+    <p><strong>Group Website: </strong><a href="https://kawaii-lab.github.io/">https://kawaii-lab.github.io/</a></p>
 </footer>
 
 </body>
