--- a/opportunities.html
+++ b/opportunities.html
@@ -22,10 +22,12 @@
 
 <main>
 <h1>Research opportunities</h1>
-<p><strong>Notice:</strong> Information about research opportunities at HKU will be available soon.</p>
+<p><strong>Please refer to </strong> <a href="https://kawaii-lab.github.io/join.html">the "Join us" page in the KAWAII lab website.</a></p>
 </main>
+
 <footer>
     <p><strong>Contact: </strong>atsushi.suzuki.rd [at] outlook.com</p>
+    <p><strong>Group Website: </strong><a href="https://kawaii-lab.github.io/">https://kawaii-lab.github.io/</a></p>
 </footer>
 
 </body>
