rename the lab name to KAWAII AI lab

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 I'm SUZUKI, Atsushi (鈴木 惇), <a href="https://hkumath.hku.hk/MathWWW/people.php?faculty.suzuki">Assistant Professor at the University of Hong Kong (HKU).</a></p> 
 
 <p>My research interest is <strong>applied mathematics</strong> for <strong>machine learning</strong>. I have been working on <strong>learning theory</strong> and <strong>differential-geometric machine learning.</strong></p>
-<p>	Email: atsushi.suzuki.rd [at] outlook.com <br> <a href="https://kawaii-lab.github.io/">Click here to access our research group website (KAWAII lab).</a></p>
+<p>	Email: atsushi.suzuki.rd [at] outlook.com <br> <a href="https://kawaii-lab.github.io/">Click here to access our research group website (KAWAII AI lab).</a></p>
 
 <h2>News</h2>
 <ul>
