--- a/opportunities.html
+++ b/opportunities.html
@@ -22,7 +22,7 @@
 
 <main>
 <h1>Research opportunities</h1>
-<p><strong>Please refer to </strong> <a href="https://kawaii-lab.github.io/join.html">the "Join us" page in the KAWAII lab website.</a></p>
+<p><strong>Please refer to </strong> <a href="https://kawaii-lab.github.io/join.html">the "Join us" page in the KAWAII AI lab website.</a></p>
 </main>
 
 <footer>
