--- a/talks.html
+++ b/talks.html
@@ -32,6 +32,11 @@
 </ul>
 
 <h2>Lectures</h2>
+<h3>2025-26 (The University of Hong Kong)</h3>
+<ul>
+	<li>Special topics of applied AI</li>
+</ul>
+
 <h3>2023-24 (King's College London)</h3>
 <ul>
 	<li>Mathematics and statistics for artificial intelligence</li>
@@ -63,6 +68,15 @@
 </ul>
 
 <h2>Materials</h2>
+<h3 id="al_lecture">AI Lecture series</h3>
+<ul>
+	<li>1. Real-World Problems and Task Solving with Artificial Intelligence [<a href="ai_lecture/applied_ai_01_ai_en.pdf">lecture note</a>] [<a href="ai_lecture/applied_ai_01_ai_slides_en.pdf">slides</a>] [<a href="https://colab.research.google.com/drive/15-GHv87bBwfna_wC1RJGD1Q7qSHhLbR-?usp=sharing">Google Colab material</a>]</li>
+	<li>2. Machine Learning Models and Parametric Functions [<a href="ai_lecture/applied_ai_02_machine_learning_en.pdf">lecture note</a>] [<a href="ai_lecture/applied_ai_02_machine_learning_slides_en.pdf">slides</a>]</li>
+	<li>3. Functions Represented by Neural Networks [<a href="ai_lecture/applied_ai_03_neural_network_en.pdf">lecture note</a>] [<a href="ai_lecture/applied_ai_03_neural_network_slides_en.pdf">slides</a>]</li>
+	<li>4. Licenses and Openness [<a href="ai_lecture/applied_ai_04_license_en.pdf">lecture note</a>] [<a href="ai_lecture/applied_ai_04_license_slides_en.pdf">slides</a>]</li>
+</ul>
+
+<h3>Others</h3>
 <ul>
 	<li><a href="material/introduction_to_hyperbolic.pdf"> Introduction to hyperbolic space</a></li>
 </ul>
