modified the AI course name

--- a/talks.html
+++ b/talks.html
@@ -68,7 +68,7 @@
 </ul>
 
 <h2>Materials</h2>
-<h3 id="ai_lecture">AI Lecture series</h3>
+<h3 id="ai_lecture">AI Lecture series (Special topics of Applied AI @ HKU)</h3>
 <ul>
 	<li>1. Real-World Problems and Task Solving with Artificial Intelligence [<a href="ai_lecture/applied_ai_01_ai_en.pdf">lecture note</a>] [<a href="ai_lecture/applied_ai_01_ai_slides_en.pdf">slides</a>] [<a href="https://colab.research.google.com/drive/15-GHv87bBwfna_wC1RJGD1Q7qSHhLbR-?usp=sharing">Google Colab material</a>]</li>
 	<li>2. Machine Learning Models and Parametric Functions [<a href="ai_lecture/applied_ai_02_machine_learning_en.pdf">lecture note</a>] [<a href="ai_lecture/applied_ai_02_machine_learning_slides_en.pdf">slides</a>]</li>
