how to write academic papers

--- a/talks.html
+++ b/talks.html
@@ -78,10 +78,9 @@
 
 <h3>Others</h3>
 <ul>
-	<li><a href="material/introduction_to_hyperbolic.pdf"> Introduction to hyperbolic space</a></li>
-</ul>
-<ul>
-	<li><a href="material/probability_lecture.pdf"> Probability Theory</a></li>
+	<li><a href="material/how_to_write_academic_papers.pdf"> How to write academic papers </a></li>
+	<li><a href="material/introduction_to_hyperbolic.pdf"> Introduction to hyperbolic space </a></li>
+	<li><a href="material/probability_lecture.pdf"> Probability Theory </a></li>
 </ul>
 </main>
 
