updated ai lectures

--- a/talks.html
+++ b/talks.html
@@ -71,9 +71,10 @@
 <h3 id="ai_lecture">AI Lecture series (Special topics of Applied AI @ HKU)</h3>
 <ul>
 	<li>1. Real-World Problems and Task Solving with Artificial Intelligence [<a href="ai_lecture/applied_ai_01_ai_en.pdf">lecture note</a>] [<a href="ai_lecture/applied_ai_01_ai_slides_en.pdf">slides</a>] [<a href="https://colab.research.google.com/drive/15-GHv87bBwfna_wC1RJGD1Q7qSHhLbR-?usp=sharing">Google Colab material</a>]</li>
-	<li>2. Machine Learning Models and Parametric Functions [<a href="ai_lecture/applied_ai_02_machine_learning_en.pdf">lecture note</a>] [<a href="ai_lecture/applied_ai_02_machine_learning_slides_en.pdf">slides</a>] [<a href="https://drive.google.com/file/d/1hiYrznmy1FcJ8ixR1akoGTfTq-qWUAaT/view?usp=sharing">Google Colab material</a>]</li>
-	<li>3. Functions Represented by Neural Networks [<a href="ai_lecture/applied_ai_03_neural_network_en.pdf">lecture note</a>] [<a href="ai_lecture/applied_ai_03_neural_network_slides_en.pdf">slides</a>]</li>
-	<li>4. Licenses and Openness [<a href="ai_lecture/applied_ai_04_license_en.pdf">lecture note</a>] [<a href="ai_lecture/applied_ai_04_license_slides_en.pdf">slides</a>] [<a href="https://drive.google.com/file/d/1l4-8sXsXD0Bn8mSzfoBajuLxNwPk22cg/view?usp=sharing">Google Colab material</a>]</li>
+	<li>2. Machine Learning Models and Parametric Functions [<a href="ai_lecture/applied_ai_02_machine_learning_en.pdf">lecture note</a>] [<a href="ai_lecture/applied_ai_02_machine_learning_slides_en.pdf">slides</a>] [<a href="https://colab.research.google.com/drive/1w2x9vWdws40Dk72IxhqSX_Z3uP4RgsQ-?usp=sharing">Google Colab material</a>]</li>
+	<li>3. Functions Represented by Neural Networks [<a href="ai_lecture/applied_ai_03_neural_network_en.pdf">lecture note</a>] [<a href="ai_lecture/applied_ai_03_neural_network_slides_en.pdf">slides</a>] [<a href="https://colab.research.google.com/drive/1Ka-4d42cCztLEwUv0HAHSxIbagmz_L75?usp=sharing">Google Colab material</a>]</li>
+	<li>4. Licenses and Openness [<a href="ai_lecture/applied_ai_04_license_en.pdf">lecture note</a>] [<a href="ai_lecture/applied_ai_04_license_slides_en.pdf">slides</a>] [<a href="https://colab.research.google.com/drive/12fW259nmfvAA6j8tUXKXqfLIiUBTM8e5?usp=sharing">Google Colab material</a>]</li>
+	<li>5. Pipeline and Tokenization [<a href="ai_lecture/applied_ai_05_pipeline_tokenization_en.pdf">lecture note</a>] [<a href="ai_lecture/applied_ai_05_pipeline_tokenization_slides_en.pdf">slides</a>] [<a href="https://colab.research.google.com/drive/1En1BW6WzaZK5kaiWyUpjihqGh2VYtcfy?usp=sharing">Google Colab material</a>]</li>
 </ul>
 
 <h3>Others</h3>
