--- a/ai_lecture/index.html
+++ b/ai_lecture/index.html
@@ -36,6 +36,7 @@
 	<li>3. Functions Represented by Neural Networks [<a href="applied_ai_03_neural_network_en.pdf">lecture note</a>] [<a href="applied_ai_03_neural_network_slides_en.pdf">slides</a>] [<a href="https://colab.research.google.com/drive/1Ka-4d42cCztLEwUv0HAHSxIbagmz_L75?usp=sharing">Google Colab material</a>]</li>
 	<li>4. Licenses and Openness [<a href="applied_ai_04_license_en.pdf">lecture note</a>] [<a href="applied_ai_04_license_slides_en.pdf">slides</a>] [<a href="https://colab.research.google.com/drive/12fW259nmfvAA6j8tUXKXqfLIiUBTM8e5?usp=sharing">Google Colab material</a>]</li>
 	<li>5. Pipeline and Tokenization [<a href="applied_ai_05_pipeline_tokenization_en.pdf">lecture note</a>] [<a href="applied_ai_05_pipeline_tokenization_slides_en.pdf">slides</a>] [<a href="https://colab.research.google.com/drive/1En1BW6WzaZK5kaiWyUpjihqGh2VYtcfy?usp=sharing">Google Colab material</a>]</li>
+	<li>6. Probabilistic Language Model and Token Generation [<a href="applied_ai_06_token_generation_en.pdf">lecture note</a>] [<a href="applied_ai_06_token_generation_slides_en.pdf">slides</a>] [<a href="https://colab.research.google.com/drive/1G4KbbQlanL0VmYVVDL8O8tDS1JWrysDz?usp=sharing">Google Colab material</a>]</li>
 </ul>
 
 </main>
