--- a/publications.html
+++ b/publications.html
@@ -22,6 +22,12 @@
 
 <main>
 
+<h2>Links</h2>
+<ul>
+	<li><a href="https://scholar.google.com/citations?user=kbMr45UAAAAJ&hl=en&oi=sra">Google Scholar</a></li>
+	<li><a href="https://orcid.org/0000-0002-9447-7146">ORCiD</a></li>
+</ul>
+
 <h2>Preprints</h2>
 <p>See also <a href="https://scholar.google.com/citations?user=kbMr45UAAAAJ&hl=en&oi=sra">Google Scholar</a>.</p>
 <ul>
