--- a/ai_lecture/index.html
+++ b/ai_lecture/index.html
@@ -41,6 +41,7 @@
     <li>8. Evaluating LLM [<a href="applied_ai_08_llm_evaluation_en.pdf">lecture note</a>] [<a href="applied_ai_08_llm_evaluation_slides_en.pdf">slides</a>]</li>
     <li>9. Evaluating LLM Difference [<a href="applied_ai_09_evaluating_llm_difference_en.pdf">lecture note</a>] [<a href="applied_ai_09_evaluating_llm_difference_slides_en.pdf">slides</a>] [<a href="https://colab.research.google.com/drive/1gbh5A90GUjqn6lkLqlSotjbjbGf338Ce?usp=sharing">Google Colab material</a>]</li>
     <li>11. Image Generation [<a href="applied_ai_11_image_generation_en.pdf">lecture note</a>] [<a href="applied_ai_11_image_generation_slides_en.pdf">slides</a>] [<a href="https://colab.research.google.com/drive/17wm_6ConVPBkjoUTjyi5-acbMYhQMrMV?usp=sharing">Google Colab material</a>]</li>
+    <li>12. VAE [<a href="applied_ai_12_vae_en.pdf">lecture note</a>] [<a href="applied_ai_12_vae_slides_en.pdf">slides</a>] [<a href="https://colab.research.google.com/drive/1agGa1DeDu5zPSi7G3QEE_-5mQYai_G3T?usp=sharing">Google Colab material</a>]</li>
 </ul>
 
 </main>
