--- a/ai_lecture/index.html
+++ b/ai_lecture/index.html
@@ -42,7 +42,8 @@
     <li>9. Evaluating LLM Difference [<a href="applied_ai_09_evaluating_llm_difference_en.pdf">lecture note</a>] [<a href="applied_ai_09_evaluating_llm_difference_slides_en.pdf">slides</a>] [<a href="https://colab.research.google.com/drive/1gbh5A90GUjqn6lkLqlSotjbjbGf338Ce?usp=sharing">Google Colab material</a>]</li>
     <li>11. Image Generation [<a href="applied_ai_11_image_generation_en.pdf">lecture note</a>] [<a href="applied_ai_11_image_generation_slides_en.pdf">slides</a>] [<a href="https://colab.research.google.com/drive/17wm_6ConVPBkjoUTjyi5-acbMYhQMrMV?usp=sharing">Google Colab material</a>]</li>
     <li>12. VAE [<a href="applied_ai_12_vae_en.pdf">lecture note</a>] [<a href="applied_ai_12_vae_slides_en.pdf">slides</a>] [<a href="https://colab.research.google.com/drive/1agGa1DeDu5zPSi7G3QEE_-5mQYai_G3T?usp=sharing">Google Colab material</a>]</li>
-    <li>13. Reverse Diffusion [<a href="applied_ai_13_reverse_diffusion_en.pdf">lecture note</a>] [<a href="applied_ai_13_reverse_diffusion_slides_en.pdf">slides</a>] [<a href="https://colab.research.google.com/drive/1u_YM8udGVNplzT-2esPZ3VcDvh6609MU?usp=sharing">Google Colab material</a>]</li>
+    <li>13. Reverse Diffusion [<a href="applied_ai_13_reverse_diffusion_en.pdf">lecture note</a>] [<a href="applied_ai_13_reverse_diffusion_slides_en.pdf">slides</a>] [<a href="https://colab.research.google.com/drive/1nNMIQPAQbwLmJTIXdsK07qG0lGsRs033?usp=sharing">Google Colab material</a>]</li>
+    <li>14. Diffusion Strategy [<a href="applied_ai_14_diffusion_strategy_en.pdf">lecture note</a>] [<a href="applied_ai_14_diffusion_strategy_slides_en.pdf">slides</a>] [<a href="https://colab.research.google.com/drive/1K8997HBirjwAwMb3amMHqCJXavWIzAPE?usp=sharing">Google Colab material</a>]</li>
 </ul>
 
 </main>
