--- a/ai_lecture/index.html
+++ b/ai_lecture/index.html
@@ -44,6 +44,7 @@
     <li>12. VAE [<a href="applied_ai_12_vae_en.pdf">lecture note</a>] [<a href="applied_ai_12_vae_slides_en.pdf">slides</a>] [<a href="https://colab.research.google.com/drive/1agGa1DeDu5zPSi7G3QEE_-5mQYai_G3T?usp=sharing">Google Colab material</a>]</li>
     <li>13. Reverse Diffusion [<a href="applied_ai_13_reverse_diffusion_en.pdf">lecture note</a>] [<a href="applied_ai_13_reverse_diffusion_slides_en.pdf">slides</a>] [<a href="https://colab.research.google.com/drive/1nNMIQPAQbwLmJTIXdsK07qG0lGsRs033?usp=sharing">Google Colab material</a>]</li>
     <li>14. Diffusion Strategy [<a href="applied_ai_14_diffusion_strategy_en.pdf">lecture note</a>] [<a href="applied_ai_14_diffusion_strategy_slides_en.pdf">slides</a>] [<a href="https://colab.research.google.com/drive/1K8997HBirjwAwMb3amMHqCJXavWIzAPE?usp=sharing">Google Colab material</a>]</li>
+    <li>15. Convolutional neural networks in image generation [<a href="applied_ai_15_convolutional_neural_network_in_image_generation_en.pdf">lecture note</a>] [<a href="applied_ai_15_convolutional_neural_network_in_image_generation_slides_en.pdf">slides</a>] [<a href="https://colab.research.google.com/drive/1LtvUtAZdHKu4SyRIsgbaSnxV4EELxaEA?usp=sharing">Google Colab material</a>]</li>
 </ul>
 
 </main>
