--- a/ai_lecture/index.html
+++ b/ai_lecture/index.html
@@ -45,6 +45,7 @@
     <li>13. Reverse Diffusion [<a href="applied_ai_13_reverse_diffusion_en.pdf">lecture note</a>] [<a href="applied_ai_13_reverse_diffusion_slides_en.pdf">slides</a>] [<a href="https://colab.research.google.com/drive/1nNMIQPAQbwLmJTIXdsK07qG0lGsRs033?usp=sharing">Google Colab material</a>]</li>
     <li>14. Diffusion Strategy [<a href="applied_ai_14_diffusion_strategy_en.pdf">lecture note</a>] [<a href="applied_ai_14_diffusion_strategy_slides_en.pdf">slides</a>] [<a href="https://colab.research.google.com/drive/1K8997HBirjwAwMb3amMHqCJXavWIzAPE?usp=sharing">Google Colab material</a>]</li>
     <li>15. Convolutional neural networks in image generation [<a href="applied_ai_15_convolutional_neural_network_in_image_generation_en.pdf">lecture note</a>] [<a href="applied_ai_15_convolutional_neural_network_in_image_generation_slides_en.pdf">slides</a>] [<a href="https://colab.research.google.com/drive/1LtvUtAZdHKu4SyRIsgbaSnxV4EELxaEA?usp=sharing">Google Colab material</a>]</li>
+    <li>16. Text encoder and prompt weighting [<a href="applied_ai_16_text_encoder_and_prompt_weighting_en.pdf">lecture note</a>] [<a href="applied_ai_16_text_encoder_and_prompt_weighting_slides_en.pdf">slides</a>] [<a href="https://colab.research.google.com/drive/13Nm3YD75WQqIHpMECGWbPCi34RtNoDxm?usp=sharing">Google Colab material</a>]</li>
 </ul>
 
 </main>
