--- a/ai_lecture/index.html
+++ b/ai_lecture/index.html
@@ -47,6 +47,7 @@
     <li>15. Convolutional neural networks in image generation [<a href="applied_ai_15_convolutional_neural_network_in_image_generation_en.pdf">lecture note</a>] [<a href="applied_ai_15_convolutional_neural_network_in_image_generation_slides_en.pdf">slides</a>] [<a href="https://colab.research.google.com/drive/1LtvUtAZdHKu4SyRIsgbaSnxV4EELxaEA?usp=sharing">Google Colab material</a>]</li>
     <li>16. Text encoder and prompt weighting [<a href="applied_ai_16_text_encoder_and_prompt_weighting_en.pdf">lecture note</a>] [<a href="applied_ai_16_text_encoder_and_prompt_weighting_slides_en.pdf">slides</a>] [<a href="https://colab.research.google.com/drive/13Nm3YD75WQqIHpMECGWbPCi34RtNoDxm?usp=sharing">Google Colab material</a>]</li>
     <li>17. Fundamentals of AI tuning [<a href="applied_ai_17_fundamentals_of_nn_tuning_en.pdf">lecture note</a>] [<a href="applied_ai_17_fundamentals_of_nn_tuning_slides_en.pdf">slides</a>] [<a href="https://colab.research.google.com/drive/1eqLqqV2VSYg3QFJgPTb1GXZ5zuTEgfZW?usp=sharing">Google Colab material</a>]</li>
+    <li>18. Parameter efficient finetuning and LoRA [<a href="applied_ai_18_peft_lora_en.pdf">lecture note</a>] [<a href="applied_ai_18_peft_lora_slides_en.pdf">slides</a>] [<a href="https://colab.research.google.com/drive/1c7ylJWl7_Y8qBvrXdIr8h3Bxtqld4fj3?usp=sharing">Google Colab material</a>]</li>
 </ul>
 
 </main>
