--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@ I'm SUZUKI, Atsushi (鈴木 惇), <a href="https://hkumath.hku.hk/MathWWW/people
 
 <h2>News</h2>
 <ul>
-	<li>Will serve as Area Chair for <strong>NeurIPS 2025</strong>.</li>
+	<li>Will give a talk at <a href="https://hkumath.hku.hk/~imr/event/HKUICML2025/index.html">International Conference on Scientific Machine Learning (<strong>ICSML</strong>)</a> , The University of Hong Kong, 2025-12-01 (<a href="material/renyi_entropy_overfitting_limit_slides.pdf"> presentation slides </a>).</li>
+	<li>Served as Area Chair for <strong>NeurIPS 2025</strong>.</li>
 	<li>Our paper, <strong>"Hallucinations are inevitable but statistically negligible,"</strong> <a href="https://arxiv.org/abs/2502.12187">has been uploaded to arXiv (2025-02-15).</a></li>
 	<li>Joined <strong>the University of Hong Kong</strong> as of 2025-01-01.</li>
 	<li>Our paper, <strong>"Foundation of Calculating Normalized Maximum Likelihood for Continuous Probability Models,"</strong> <a href="https://arxiv.org/abs/2409.08387">has been uploaded to arXiv (2024-09-12).</a></li>
